Remove extra list models endpoint, update specs and examples
